添加了CB链的反弹shell